objects/ActivityProduct__c.object
<CustomObject>
    <fields>
        <fullName>ActivityComments__c</fullName>
        <description>The shortened version of the Description from the parent Task</description>
        <label>Activity Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ActivityId__c</fullName>
        <externalId>true</externalId>
        <label>ActivityId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityProduct__c</fullName>
        <label>ActivityProduct</label>
        <length>37</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ActivityRelationId__c</fullName>
        <description>The TaskRelation or EventRelation that is associated with this row</description>
        <label>Activity Relation Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivitySource__c</fullName>
        <label>Activity Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivitySubType__c</fullName>
        <label>Activity SubType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate Request</fullName>
                </value>
                <value>
                    <fullName>Product/Promotional</fullName>
                </value>
                <value>
                    <fullName>Follow-Up/Service</fullName>
                </value>
                <value>
                    <fullName>Solutions</fullName>
                </value>
                <value>
                    <fullName>Roadshow</fullName>
                </value>
                <value>
                    <fullName>Other/Voicemail</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActivityType__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <formula>Product__r.AffiliateLU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetClass__c</fullName>
        <formula>TEXT(Product__r.AssetClass__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <description>The Campaign__c from the parent Task</description>
        <label>Campaign</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel</label>
        <referenceTo>Channel__c</referenceTo>
        <relationshipLabel>Activity Products</relationshipLabel>
        <relationshipName>Activity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>The Opportunity__c from the parent Task</description>
        <label>Opportunity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerChannel__c</fullName>
        <label>Owner Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerReportingTo__c</fullName>
        <formula>Owner:User.Manager.FirstName + ' ' +  Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Reporting To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerTerritoryId__c</fullName>
        <description>The owner's activity territory id at the time of activity creation</description>
        <label>Owner Territory Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerTerritoryMARS__c</fullName>
        <description>The owner's activity territory at the time of activity creation based on MARS Territory Name</description>
        <label>Owner Territory MARS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerTerritory__c</fullName>
        <label>Owner Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerZone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Zone</label>
        <referenceTo>Zone__c</referenceTo>
        <relationshipLabel>Activity Products</relationshipLabel>
        <relationshipName>Activity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Product2.ProductVisible__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Activity Products</relationshipLabel>
        <relationshipName>Activity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubjectURL__c</fullName>
        <formula>HYPERLINK('/'&amp; ActivityId__c ,  Subject__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SynergyRowId__c</fullName>
        <externalId>true</externalId>
        <label>SynergyRowId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskRelationId__c</fullName>
        <externalId>true</externalId>
        <label>Task Relation Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeGroup__c</fullName>
        <formula>IF( contains(Type__c,'Call') , 'Call', IF( contains(Type__c,'Meeting') , 'Meeting', 'Other'))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhatIdObjectAPIName__c</fullName>
        <description>Object API Name of the WhatId on this record</description>
        <externalId>true</externalId>
        <label>WhatId Object API Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhatIdObjectLabel__c</fullName>
        <description>Object label for the WhatId on this record</description>
        <label>WhatId Object Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhatId__c</fullName>
        <description>WhatId of the parent Task</description>
        <externalId>true</externalId>
        <label>WhatId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Activity Product</label>
    <nameField>
        <displayFormat>AP-{0000000000}</displayFormat>
        <label>Activity Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Products</pluralLabel>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SubjectURL__c</columns>
        <columns>ActivityProduct__c</columns>
        <columns>ActivitySource__c</columns>
        <columns>ActivityId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OwnerChannel__c</columns>
        <columns>Channel__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Can_Not_Update_Product</fullName>
        <active>true</active>
        <errorConditionFormula>ischanged(Product__c)</errorConditionFormula>
        <errorMessage>Can Not Update Product.
Please Delete and Insert a new record instead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Add_To_Old_Tasks</fullName>
        <active>true</active>
        <description>Users cannot add records to tasks older than the days in custom setting NGAM Settings - Hierarchy.Cannot CUD Activity After Days.</description>
        <errorConditionFormula>AND(ISNEW(),TODAY() - Date__c &gt; $Setup.NGAMSettingsHierarchy__c.CannotCUDActivityAfterDays__c)</errorConditionFormula>
        <errorMessage>You cannot add products to old tasks.</errorMessage>
    </validationRules>
</CustomObject>